--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Yueeee
 email: 391311qy@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A man with a thousand mouths
-baseurl: "391311qy.github.io" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "391311qy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 391311qy
 github_username:  391311qy
 
