--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: 391311qy@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A man with a thousand mouths
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "391311qy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "www.391311by.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 391311qy
 github_username:  391311qy
 
