--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Yueeee
 email: 391311qy@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A man with a thousand mouths
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "www.391311by.com" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/index" # the subpath of your site, e.g. /blog
+url: "https://www.391311by.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 391311qy
 github_username:  391311qy
 
